apps/infrastructure/traefik/overlays/prod/immich-connector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-connector
  namespace: traefik
spec:
  type: ExternalName
  externalName: immich.taila9d5d4.ts.net
