apps/infrastructure/traefik/overlays/prod/immich-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.newyeti.qzz.io`)
      kind: Rule
      services:
        - name: immich
          namespace: workloads
          port: 2283
  tls:
    secretName: newyeti-tls-cert
